# sound_visualizer_x11

./: CMakeLists.txt  README.md
include/audio/: AudioCapture.hpp
src/: main.cpp
src/audio/: AudioCapture.cpp
